samples/_failures_safe/1761615780_2857f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd5d5e60.c: In function ‘main’:
./samples/SAFE/__tmp_bd5d5e60.c:152:26: error: missing terminating " character
  152 |     int cols1 = read_int("Enter columns for matrix A (1
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bd5d5e60.c:152:5: error: expected expression at end of input
  152 |     int cols1 = read_int("Enter columns for matrix A (1
      |     ^~~
./samples/SAFE/__tmp_bd5d5e60.c:152:17: error: too few arguments to function ‘read_int’
  152 |     int cols1 = read_int("Enter columns for matrix A (1
      |                 ^~~~~~~~
./samples/SAFE/__tmp_bd5d5e60.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_bd5d5e60.c:152:5: error: expected declaration or statement at end of input
  152 |     int cols1 = read_int("Enter columns for matrix A (1
      |     ^~~
